feat: support JDK 17